--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>DARK SIDE</title>
 </head>
 <body>
-    <h1>DARK SIDE</h1>
+  <h1>DARK SIDE</h1>
+  <p>"Некрополь" - это частная тюрьма, построенная одной из групп теневого мирового правительства. Противоборствующие группы строят такие тюрьмы, чтоб избавляться от нежелательных субъектов, которые не могут быть просто ликвидированы, так как являются носителями важной информации или могут быть использованы в глобальных "торгах".
+  Каждый из вас попал в Некрополь не случайно. Все вы - представители разных групп влияния, которые имеют свой интерес в Некрополе. Вас внедрили сюда с особыми миссиями. У каждого своя, но пройдя весь путь вы не только спасаетесь, но и каждый выполняет цель.
+  </p>
 </body>
 </html>
